--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="row" style="margin-left: 4%; margin-right: 4%;; ">
             <div class="card col-md-2" style="width: 18rem; display: flex;">
-                <img src="https://pics.filmaffinity.com/Alquimia_de_almas_Serie_de_TV-243466934-large.jpg" style="height: 80%; width: 120%;" class="card-img-top" alt="...">
+                <img src="https://pics.filmaffinity.com/Alquimia_de_almas_Serie_de_TV-243466934-large.jpg" style="height: 80%; position:center;" class="card-img-top" alt="...">
                 <div class="card-body">
                 <a class="btn btn-danger btn-lg" href="#" style="background-color: azure; color: black;" role="button">Ver ahora</a>
                 </div>
@@ -91,9 +91,9 @@
         </div>
 
         <div class="row" style="margin-top: 20px; margin-left: 4%; margin-right: 4%;">
-            <div class="card col-md-2" style="width: 18rem; display: flex; ">
-                <img src="https://1.bp.blogspot.com/-pvfW7FFpYY8/Xv1bj0TVIeI/AAAAAAAAFiM/9uMRGE66YGkBgW_X8GNicyzFyP94snBOQCLcBGAsYHQ/s1600/20200702_092846.jpg" style="width: 110%; height: 80%;" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card col-md-2" style="width: 20rem; display: flex;">
+                <img src="https://1.bp.blogspot.com/-pvfW7FFpYY8/Xv1bj0TVIeI/AAAAAAAAFiM/9uMRGE66YGkBgW_X8GNicyzFyP94snBOQCLcBGAsYHQ/s1600/20200702_092846.jpg" style=" height: 80%; position: center;" class="card-img-top" alt="...">
+                <div class="card-body" >
                     <a class="btn btn-danger btn-lg" style="background-color: azure; color: black;" href="#" role="button">Ver ahora</a>
                 </div>
             </div>
